Gateway.API/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:

              #Authorization
              - match:
                  prefix: /authorization
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/account
                  cluster: authorization_api

              #Appointments Write
              - match:
                  prefix: /appointments/results
                  case_sensitive: false
                  headers:
                    - name: :method
                      exact_match: GET
                      invert_match: true
                route:
                  prefix_rewrite: /api/appointmentsresults
                  cluster: appointments_write_api
              - match:
                  prefix: /appointments
                  case_sensitive: false
                  headers:
                    - name: :method
                      exact_match: GET
                      invert_match: true
                route:
                  prefix_rewrite: /api/appointments
                  cluster: appointments_write_api

              #Appointments Read
              - match:
                  prefix: /appointments/results
                  case_sensitive: false
                  headers:
                    - name: :method
                      exact_match: GET
                route:
                  prefix_rewrite: /api/appointmentsresults
                  cluster: appointments_read_api
              - match:
                  prefix: /appointments
                  case_sensitive: false
                  headers:
                    - name: :method
                      exact_match: GET
                route:
                  prefix_rewrite: /api/appointments
                  cluster: appointments_read_api
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "^/doctors/([^/]+)/appointments$"
                  case_sensitive: false
                  headers:
                    - name: :method
                      exact_match: GET
                route:
                  regex_rewrite:
                    pattern:
                      google_re2: {}
                      regex: "^/doctors/([^/]+)/appointments$"
                    substitution: "/api/doctors/\\1/appointments"
                  cluster: appointments_read_api
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "^/patients/([^/]+)/appointments$"
                  case_sensitive: false
                  headers:
                    - name: :method
                      exact_match: GET
                route:
                  regex_rewrite:
                    pattern:
                      google_re2: {}
                      regex: "^/patients/([^/]+)/appointments$"
                    substitution: "/api/patients/\\1/appointments"
                  cluster: appointments_read_api

              #Documents
              - match:
                  prefix: /documents/photos
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/photos
                  cluster: documents_api
              - match:
                  prefix: /documents/appointmentresults
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/appointmentresults
                  cluster: documents_api

              - match:
                  prefix: /offices/photos
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/offices
                  cluster: offices_api

              #Profiles
              - match:
                  prefix: /patients
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/patients
                  cluster: profiles_api
              - match:
                  prefix: /doctors
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/doctors
                  cluster: profiles_api
              - match:
                  prefix: /receptionists
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/receptionists
                  cluster: profiles_api

              #Services
              - match:
                  prefix: /services/categories
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/servicecategories
                  cluster: services_api
              - match:
                  prefix: /services
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/services
                  cluster: services_api
              - match:
                  prefix: /specializations
                  case_sensitive: false
                route:
                  prefix_rewrite: /api/specializations
                  cluster: services_api

  clusters:
  - name: authorization_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: authorization_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: authorization.api
                port_value: 80

  - name: appointments_write_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: appointments_write_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: appointments.write.api
                port_value: 80

  - name: appointments_read_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: appointments_read_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: appointments.read.api
                port_value: 80

  - name: documents_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: documents_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: documents.api
                port_value: 80

  - name: offices_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: offices_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: offices.api
                port_value: 80

  - name: profiles_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: profiles_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: profiles.api
                port_value: 80

  - name: services_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: services_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: services.api
                port_value: 80
